traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:27: error: Unmatched closing brace '}' ignored here
}
^